objects/Trainee__c.object
<CustomObject>
    <fields>
        <fullName>Action_Plan_Week_10__c</fullName>
        <label>Action Plan Week 10</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Week_11__c</fullName>
        <label>Action Plan Week 11</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Week_12__c</fullName>
        <label>Action Plan Week 12</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Average_Score__c</fullName>
        <formula>(Week_1_Score__c + 
Week_2_Score__c + 
Week_3_Score__c+
Week_4_Score__c+
Week_5_Score__c+
Week_6_Score__c+
Week_7_Score__c+
Week_8_Score__c+
Week_9_Score__c+
Week_10_Score__c+
Week_11_Score__c+
Week_12_Score__c
) / 
(
If(Week_1_Score__c=0,0,1)+
If(Week_2_Score__c =0,0,1)+
If(Week_3_Score__c =0,0,1)+
If(Week_4_Score__c =0,0,1)+
If(Week_5_Score__c =0,0,1)+
If(Week_6_Score__c =0,0,1)+
If(Week_7_Score__c =0,0,1)+
If(Week_8_Score__c =0,0,1)+
If(Week_9_Score__c =0,0,1)+
If(Week_10_Score__c =0,0,1)+
If(Week_11_Score__c =0,0,1)+
If(Week_12_Score__c =0,0,1)


)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Score %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_End_Date__c</fullName>
        <formula>L_D_Ops__r.Batch_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Batch_Start_Date__c</fullName>
        <formula>L_D_Ops__r.Batch_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Hiring_Managers_Name__c</fullName>
        <formula>L_D_Ops__r.CS_Hiring_Managers_Name__r.FirstName +" " + L_D_Ops__r.CS_Hiring_Managers_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CS Hiring Managers Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Extention__c</fullName>
        <label>Cisco Extention</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Count_of_Days_Absent__c</fullName>
        <label>Count of Days Absent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Of_Joining__c</fullName>
        <label>Date Of Joining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Denominator_Week_10__c</fullName>
        <label>Denominator Week 10</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Denominator_Week_11__c</fullName>
        <label>Denominator Week 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Denominator_Week_12__c</fullName>
        <label>Denominator Week 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Denominator_Week__c</fullName>
        <label>Denominator Week 9</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EWS_Status__c</fullName>
        <label>EWS Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Amber</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EWS_Week_10__c</fullName>
        <label>EWS Week 10</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EWS_Week</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EWS_Week_11__c</fullName>
        <label>EWS Week 11</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EWS_Week</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EWS_Week_12__c</fullName>
        <label>EWS Week 12</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>EWS_Week</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emai_ID__c</fullName>
        <label>Emai ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GO_Live_Date__c</fullName>
        <label>GO Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L_D_Ops__c</fullName>
        <label>L &amp; D Ops</label>
        <referenceTo>L_D_Ops__c</referenceTo>
        <relationshipLabel>Trainee</relationshipLabel>
        <relationshipName>Trainee</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Presentation__c</fullName>
        <label>Presentation %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RCA_Week_10__c</fullName>
        <label>RCA Week 10</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RCA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCA_Week_11__c</fullName>
        <label>RCA Week 11</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RCA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCA_Week_12__c</fullName>
        <label>RCA Week 12</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RCA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Re_deployed_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Redeployed Trainees</label>
        <referenceTo>L_D_Ops__c</referenceTo>
        <relationshipLabel>Redeployed Trainees</relationshipLabel>
        <relationshipName>Trainee1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Redeployed_Date__c</fullName>
        <label>Redeployed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resigned_Date__c</fullName>
        <label>Resigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trainee_Status__c</fullName>
        <label>Trainee Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Classroom</fullName>
                </value>
                <value>
                    <fullName>Mentoring</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Resigned</fullName>
                </value>
                <value>
                    <fullName>Asked to Leave</fullName>
                </value>
                <value>
                    <fullName>Ref Check Failure</fullName>
                </value>
                <value>
                    <fullName>Absconding</fullName>
                </value>
                <value>
                    <fullName>Classroom Completed</fullName>
                </value>
                <value>
                    <fullName>Fast Track – Classroom</fullName>
                </value>
                <value>
                    <fullName>Fast Track – Classroom: Completed</fullName>
                </value>
                <value>
                    <fullName>Re-deployed</fullName>
                </value>
                <value>
                    <fullName>RCP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trainer_Name__c</fullName>
        <formula>L_D_Ops__r.Trainer_Name__r.FirstName +" " + L_D_Ops__r.Trainer_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trainer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_10_Score__c</fullName>
        <label>Week 10 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_11_Score__c</fullName>
        <label>Week 11 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_12_Score__c</fullName>
        <label>Week 12 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Trainee</label>
    <nameField>
        <label>Trainee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trainee</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LnD_Ops_cannot_be_same_as_Redeployed_to</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR
(ISNEW(),
ISCHANGED(Re_deployed_to__c)),
Re_deployed_to__c=L_D_Ops__c
)</errorConditionFormula>
        <errorMessage>Trainee cannot be re-deployed to same batch.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Re_Deployed_field_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Trainee_Status__c ,"Re-deployed"),
ISBLANK(Re_deployed_to__c) 
)</errorConditionFormula>
        <errorMessage>"Re-deployed to" field cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Redeployed_Status_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISCHANGED(Re_deployed_to__c), 
NOT(ISPICKVAL(Trainee_Status__c, "Re-deployed")),
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")) 
)</errorConditionFormula>
        <errorMessage>You cannot change "Re-deployed to" field at this status.</errorMessage>
    </validationRules>
</CustomObject>